--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build
-          path: build
+          path: ./build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
